--- a/Views/g.ejs
+++ b/Views/g.ejs
@@ -20,6 +20,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link rel="stylesheet" href="css/styles.css" />
+  <style>
+    
+        .submit-btn-2 {
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            padding: 12px 90px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .submit-btn-2:hover {
+            background-color: #0056b3;
+        }
+        
+    </style>
+  </style>
 </head>
 
 <body id="page-top">
@@ -52,6 +70,11 @@
             <a class="nav-link me-lg-3" href="/appointments">Appointment</a>
           </li>
           <% } %> 
+          <% if(loggedIn && userType=="Examiner" ) { %>
+            <li class="nav-item">
+              <a class="nav-link me-lg-3" href="/examiner">Examiner</a>
+            </li>
+            <% } %>
 
         </ul>
         <% if(!loggedIn) { %>
@@ -77,7 +100,7 @@
   <!-- Mashead header-->
   <header class="masthead">
     <div class="container">
-      <h1 class="heading">Enter License Number</h1><br>
+      <h1 class="heading">G Details</h1><br>
 
       <% if (typeof error !== 'undefined') { %>
       <div class="alert alert-danger" role="alert"><%= error %></div>
@@ -182,15 +205,16 @@
               </div>
               <br />
               <!-- Submit Button -->
-              <button class="btn btn-primary text-uppercase" id="submitButton"
-                  type="submit">Update</button>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary submit-btn-2">Update</button>
+            </div>
           </form>
           <% } %>
     </div>
   </header>
   <!-- Quote/testimonial aside-->
   <!-- Footer-->
-  <footer class="bg-black text-center py-5">
+  <footer class="bg-black text-center py-5 ">
     <div class="container px-5">
       <div class="text-white-50 small">
         <div class="mb-2">
